Updating error pages (DHH-140)

--- a/public/503.html
+++ b/public/503.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0">
-    <title>403 Forbidden - UC San Diego Library Digital Collections</title>
+    <title>503 Service Unavailable - UC San Diego Library Digital Collections</title>
     <style>
         body{margin:0;padding:0;}
         #dc-error,#container,#msg{-moz-box-sizing:border-box;}
-        #dc-error{background-image:url(http://libraries.ucsd.edu/assets/dams/error/403.jpg);margin:0 auto;max-width:1200px;width:100%;background-position:center center;background-size:cover;height:640px;position:relative;}
+        #dc-error{background-image:url(http://libraries.ucsd.edu/assets/dams/error/503.jpg);margin:0 auto;max-width:1200px;width:100%;background-position:center center;background-size:cover;height:640px;position:relative;}
         #container{background-color:#6C0000;background-color:rgba(108,0,0,0.85);padding:0;width:100%;height:640px;overflow:hidden;}
         #dc-logo{display:block;margin:0 auto;padding-top:50px;}
         #msg{background-color:#460000;background-color:rgba(70,0,0,0.85);padding:20px;font-family:sans-serif;width:80%;margin:20px auto;color:#fff;font-size:1em;}
@@ -23,9 +23,9 @@
     <section id="container">
         <img alt="Digital Collections Error Message" id="dc-logo" src="http://libraries.ucsd.edu/assets/dams/error/logo-dc-error.png" />
         <section id="msg">
-            <h1>Forbidden</h1>
-            <p>You are not allowed to view this page.</p>
-            <p><em>Response Status Code 403</em></p>
+            <h1>Service Unavailable</h1>
+            <p>The service is not available at this time. Please try again later.</p>
+            <p><em>Response Status Code 503</em></p>
         </section>
     </section>
 </section>
