Adding Home/Contact links to error pages (DHH-140)

--- a/public/500.html
+++ b/public/500.html
@@ -13,7 +13,8 @@
         #msg{background-color:#460000;background-color:rgba(70,0,0,0.85);padding:20px;font-family:sans-serif;width:80%;margin:20px auto;color:#fff;font-size:1em;}
         #msg h1{margin:0 0 5px 0;}
         #msg p{margin:0 0 5px 0;}
-        #msg em{font-size:0.9em;}
+        #msg em{font-size:0.9em;color:rgba(255,255,255,0.666);}
+        #msg a{color:#fff;}
         @media(max-width:640px){#dc-logo{width:80%;}}
         @media(max-width:480px){#dc-error,#container{height:480px;position:relative;}}
     </style>
@@ -25,6 +26,7 @@
         <section id="msg">
             <h1>Internal Server Error</h1>
             <p>We're sorry, but something went wrong. Please try again later.</p>
+            <p><a href="/dc/">Home</a> &#183; <a href="mailto:dlp@ucsd.edu">Contact Us</a></p>
             <p><em>Response Status Code 500</em></p>
         </section>
     </section>
